[package]
name = "as207960-smime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
samotop-core = "0"
samotop = "0"
async-std = "1"
pretty_env_logger = "0"
mailparse = "0"
log = "0"
openssl = "0"
async-std-openssl = "0"
chrono = "0"
config = "0"
serde = { version = "1", features = ["derive"] }
notify = "4"
lettre = { version = "0.10.0-rc.4", features = ["pool", "async-std1-rustls-tls", "smtp-transport"], default_features = false }